[gd_scene load_steps=12 format=3 uid="uid://c8ohhlp0rbhlg"]

[ext_resource type="Script" path="res://scripts/dialogue_overlay.gd" id="1_f2ag4"]
[ext_resource type="StyleBox" uid="uid://cfhi7o81afkgt" path="res://resources/dialoge_box_sprite.tres" id="2_8qpqh"]
[ext_resource type="FontFile" uid="uid://bj77ks2fb8blm" path="res://assets/fonts/knights-quest.regular.ttf" id="4_miwkt"]

[sub_resource type="LabelSettings" id="LabelSettings_xaat6"]
font = ExtResource("4_miwkt")
font_size = 24
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_hwbik"]
font = ExtResource("4_miwkt")
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_mcl58"]
font = ExtResource("4_miwkt")
font_size = 20
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="Animation" id="Animation_ulk1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StoryMessage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StoryMessage/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StoryMessage/Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StoryMessage:custom_minimum_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StoryMessage/Label:visible_ratio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.96705e-08]
}

[sub_resource type="Animation" id="Animation_o1l11"]
resource_name = "hide_story_text"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StoryMessage/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_42874"]
resource_name = "prompt_user"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StoryMessage/Label2:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gwfxy"]
resource_name = "show_story_message"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StoryMessage:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StoryMessage/Label:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StoryMessage:custom_minimum_size")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 160), Vector2(740, 160)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StoryMessage/Label:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.96705e-08, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cj2ij"]
_data = {
"RESET": SubResource("Animation_ulk1y"),
"hide_story_text": SubResource("Animation_o1l11"),
"prompt_user": SubResource("Animation_42874"),
"show_story_message": SubResource("Animation_gwfxy")
}

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_f2ag4")

[node name="StoryMessage" type="PanelContainer" parent="."]
clip_contents = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -192.0
offset_right = 48.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("2_8qpqh")

[node name="Label" type="Label" parent="StoryMessage"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
label_settings = SubResource("LabelSettings_xaat6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible_characters = 0
visible_ratio = 4.96705e-08

[node name="Label2" type="Label" parent="StoryMessage"]
layout_mode = 2
size_flags_vertical = 8
text = "[SPACE]"
label_settings = SubResource("LabelSettings_hwbik")
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngameMessage" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(640, 64)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -128.0
offset_right = 208.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("2_8qpqh")

[node name="Label" type="Label" parent="IngameMessage"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 0
text = "IN GAME MESSAGE"
label_settings = SubResource("LabelSettings_mcl58")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cj2ij")
}
